--- a/AngularSchool.API/Properties/launchSettings.json
+++ b/AngularSchool.API/Properties/launchSettings.json
@@ -11,16 +11,16 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+     /* "launchBrowser": true,
+      "launchUrl": "weatherforecast",*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "AngularSchool.API": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      /* "launchBrowser": true,
+      "launchUrl": "weatherforecast",*/
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
