Mudando provider(Sqlite para MySql) e configurando + Docker(Faltou apenas o compose)

--- a/AngularSchool.API/Properties/launchSettings.json
+++ b/AngularSchool.API/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,20 +11,21 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-     /* "launchBrowser": true,
-      "launchUrl": "weatherforecast",*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "AngularSchool.API": {
       "commandName": "Project",
-      /* "launchBrowser": true,
-      "launchUrl": "weatherforecast",*/
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
